# chainmaker

./: .env.example  .gitignore  DEV-STARTUP-README.md  README.md  metadata.json  package-lock.json  package.json  server.ts  start-dev.bat  start-dev.ps1  switchcase-connection-line-issue.txt  switchcase-output-port-explanation.txt
backend/: Cargo.toml  README.md
backend/.cargo/: config.toml
backend/src/: main.rs
frontend/: carousel.html  index.html  lessons_manifest.json  package-lock.json  package.json  tabs.html  test-draggable-block.html  test-switch-case.html
frontend/src/: App.jsx  index.css
frontend/src/activity-components/activities/: Generic.jsx
frontend/src/activity-components/contexts/: ActivityContext.jsx
frontend/src/activity-components/services/: activityDataService.js
frontend/src/api/: deepseek.jsx  gemini.js
frontend/src/assets/: activities.json  bc-activities-paused.json  bc-activities.json  structure-paused.json  structure.json
frontend/src/components/: Logo.jsx  MinimalBubble.css  tabs.html
frontend/src/components/Chat/: Chat.css  Chat.jsx
frontend/src/context/: MarketplaceContext.jsx
frontend/src/prompts/: prompt.js
frontend/src/redux/: store.js
src/: App.tsx  index.css
src/api/: deepseek.ts  gemini.ts
src/assets/: activities.json  structure.json
src/components/: Chat.tsx
src/components/Designer/: Designer.tsx  Toolbar.tsx
src/prompts/: prompt.ts
src/redux/: store.ts
src/redux/slices/: bangSlice.ts  connectionsSlice.ts  nodeOutputsSlice.ts  nodeSlice.ts
src/services/: apiService.ts
(+125 files in other folders)
