[package]
name = "blockchain-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = [
    "providers",
    "provider-http",
    "rpc-types-eth",
    "contract",
    "sol-types",
    "json-rpc",
    "transports",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
eyre = "0.6"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = "0.7"
futures = "0.3"
